resolve #38 CC @cspayne - I added a template file name to .gitignore for saving TEST_prop_set* files to a local machine only

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-
-py/__pycache__/prop_storage.cpython-38.pyc
-py/__pycache__/add_props.cpython-38.pyc
-py/__pycache__/store_props.cpython-38.pyc
+TEST_prop_set*
+py/__pycache__/
